new bio content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Joaquín | Ux/Ui Senior Web Designer</title>
+    <title>Maria Tres | Handmade Design</title>
     <meta name='author' content="Joaquín Figueroa">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="google-site-verification" content="0kwWNQzXRa9qKWzHQHq0JvmLdC5Oynw5oh_5LwtrvPo" />
@@ -19,17 +19,7 @@
     <div class="display-table">
         <div class="display-cell">
             <div class="container bio">
-                <!--<div class="col-lg-4 col-md-4">
-    				<div class="dummy"></div>
-    					<div class="img-container">
-        					<img src="../images/img-bio.png" class="img-circle" width="200" height="200" alt="Joaquin Figueroa"/>
-    					</div>
-				</div>-->
-                <h1>Hola, mi nombre es Joaquín Figueroa</h1>
-                <p>Diseñador Gráfico de la Escuela de Diseño <a href="http://www.duoc.cl/edd/">Duoc UC</a>. Actualmente Diseñador Lider de Producto y Experiencia de Usuario en <a href="http://lemontech.com/">Lemontech</a>.</p>
-                <p>Ex integrante del LatamLab en la <a href="http://ciudadanointeligente.org/">Fundación Ciudadano Inteligente</a>, Diseñador de Interfaces y Experiencia de Usuario en <a href="http://www.preyproject.com">Prey Project</a>. Hace 5 años llegué a Santiago a formar parte del equipo de Diseño y Desarrollo en <a href="http://www.noise-media.com">Noise Media</a>. Docente de la carrera de Diseño en <a href="http://www.inacap.cl">Inacap</a> durante el 2011. Miembro de la <a href="https://uxpa.org/">UXPA </a>(User Experience Professionals Association) y de la <a href="http://www.ixda.org/">IxDA</a> (Interaction Design Association).</p>
-                <p>Durante los últimos 6 años he trabajando en la gestión de proyectos digitales para distintas startups en Chile, Estados Unidos y Canada. Consultor en experiencia de usuario y diseño de interfaces para empresas como Banco de Chile y Entel en pequeños proyectos de levantamiento de marca.</p>
-                <p>Pueden encontrarme en <a href="https://twitter.com/soyeljuaco">Twitter</a>, <a href="https://github.com/soyeljuaco">Github</a>, parte de mis trabajos están en <a href="https://www.behance.net/soyeljuaco">Behance</a> o escríbeme a <a href="mailto:joafigueroa@gmail.com">mi lindo correo.</a></p>
+                <h1>hola, buen día.</h1>
             </div>
         </div>
         </section>
