--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="display-table">
         <div class="display-cell">
             <div class="container bio">
-                <h1>hola, buen día.</h1>
+                <h1>hola, buen día dia dia dia.</h1>
             </div>
         </div>
         </section>
